# Game-of-Life

./: CMakeLists.txt  README.md
src/: main.cpp
src/grid/: grid.cpp  grid.hpp
src/simulation/: simulation.cpp  simulation.hpp
